--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/images/me.jpg" alt="">
+                    <img src="images/me.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">
