--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <p>
                         I'm always interested in learning and progressively getting better every day. I'm lucky to have
                         a supportive family and professional team that affords me this opportunity. I think the best way
-                        to learn is through and exchange of knowledge.</p>
+                        to learn is through an exchange of knowledge.</p>
 
                     <div class="icons">
                         <div class="row">
