--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e749d4b108.js" crossorigin="anonymous"></script>
@@ -23,6 +24,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
     <title>Steve Morgan, Software Engineer</title>
 </head>
 
@@ -89,13 +91,17 @@
             <h2 class="title">
                 My skills</h2>
             <div class="skills-content">
+
                 <div class="column left">
                     <div class="text">
                         My creative skills & experiences.</div>
                     <p>
-                        I come from a Microsoft background; Windows Server, PowerShell, SQL Server, Active Directory,
-                        and Azure. I've focused on learning C# and .Net Core. I've been coupling that with Docker and
-                        Terraform where I can as well as Python. My first C# program was an Azure Function that returns
+                        I come from a Microsoft background; Windows Server, PowerShell, SQL Server, Active
+                        Directory,
+                        and Azure. I've focused on learning C# and .Net Core. I've been coupling that with Docker
+                        and
+                        Terraform where I can as well as Python. My first C# program was an Azure Function that
+                        returns
                         JSON formatted daily nutrion recommendations.</p>
 
                 </div>
@@ -141,6 +147,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -151,6 +158,7 @@
             <h2 class="title">
                 Contact me</h2>
             <div class="contact-content">
+                <div class="columns"></div>
                 <div class="column left">
                     <div class="text">
                         Feel free to reach out!</div>
@@ -159,6 +167,10 @@
                         a supportive family and professional team that affords me this opportunity. I think the best way
                         to learn is through an exchange of knowledge.</p>
 
+
+                </div>
+
+                <div class="column center">
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -185,7 +197,7 @@
                                     Email</div>
                                 <div class="sub-title">
                                     <a class="eml-protected" "
-                                        href=" #">9cefe8f9eaf9dceef9fef9f0f3ecefb2f5f3</a>
+                                            href=" #">9cefe8f9eaf9dceef9fef9f0f3ecefb2f5f3</a>
                                 </div>
                             </div>
 
@@ -193,7 +205,6 @@
                     </div>
                 </div>
                 <div class="column right">
-
                     <div class="icons">
                         <div class="row">
                             <i class="fab fa-github"></i>
@@ -235,6 +246,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        </div>
         </div>
     </section>
 
