Added favicon updated index.html updated scripts.js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <title>Steve Morgan, Software Engineer</title>
 </head>
@@ -158,13 +162,15 @@
             <h2 class="title">
                 Contact me</h2>
             <div class="contact-content">
-                <div class="columns"></div>
+
                 <div class="column left">
                     <div class="text">
                         Feel free to reach out!</div>
                     <p>
-                        I'm always interested in learning and progressively getting better every day. I'm lucky to have
-                        a supportive family and professional team that affords me this opportunity. I think the best way
+                        I'm always interested in learning and progressively getting better every day. I'm lucky to
+                        have
+                        a supportive family and professional team that affords me this opportunity. I think the best
+                        way
                         to learn is through an exchange of knowledge.</p>
 
 
@@ -245,6 +251,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
