--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#" class="menu-btn">Home</a></li>
+                <li><a href="https://blog.stevemorgan.dev" class="menu-btn">Blog</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
