updated index.html && CSS

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <title>Steve Morgan, Software Engineer</title>
+    <title>Steve Morgan, DevOps Engineer</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Steve Morgan</div>
-                <div class="text-3">And I'm a <span>Software Engineer</span></div>
+                <div class="text-3">And I'm a <span>DevOps Engineer</span></div>
             </div>
         </div>
     </section>
@@ -77,14 +77,21 @@
                 </div>
                 <div class="column right">
                     <div class="text">
-                        I'm Steve and I'm a <span>Software Engineer</span></div>
+                        I'm Steve and I'm a <span>DevOps Engineer</span></div>
                     <p>
-                        I'm currently a Sr. Systems Engineer for Walmart. I've been in IT for 15 years now and recently
-                        I've noticed a trend, as the industry continues to move more towards the cloud and towards SaaS
-                        applications and services, I'm doing less of what I enjoy; building, creating, engineering.
-                        This, coupled with a project that I worked on that left me wishing I knew more about writing
-                        software, led me to enrolling in a Computer Science program with a concentration in Software
-                        Engineering. </p>
+                        I'm currently a Sr. DevOps Engineer for Navisite supporting clients in the AWS cloud space. I've
+                        been in IT for 15 years. In 2016 I
+                        started supporting Jet.com which was born in the cloud and leveraging Microsoft's
+                        Azure. Later that year Walmart purchased the company and in 2019 I found myself on the Exchange
+                        team for Global Walmart. A year after my move, I felt like I was missing what I enjoyed in
+                        technology; building, engineering, automating. Bureaucracy and governance got in the way of
+                        every project I worked on and it didn't take long
+                        for me to miss working in the cloud. After some research I found DevOps and fell in love with
+                        everything I read about it. After reading The Phoenix Project, I knew it was the direction I
+                        needed to head. I enrolled in a Computer Science undergrad program and began working learning
+                        everything else I could get my hands on to carve out the path I needed to move into the DevOps
+                        space.
+                    </p>
                 </div>
             </div>
         </div>
@@ -101,54 +108,57 @@
                     <div class="text">
                         My creative skills & experiences.</div>
                     <p>
-                        I come from a Microsoft background; Windows Server, PowerShell, SQL Server, Active
-                        Directory,
-                        and Azure. I've focused on learning C# and .Net Core. I've been coupling that with Docker
-                        and
-                        Terraform where I can as well as Python. My first C# program was an Azure Function that
-                        returns
-                        JSON formatted daily nutrion recommendations.</p>
+                        I spend most of my time focused on improving the experience customer's have with AWS and
+                        creating efficiencies in the way the deliver their products. My primary focus is Python,
+                        Terraform, and Ansible but I leverage CloudFormation and other tools depending on my customer's
+                        needs. Regardless of what's presented, my main focus is providing the most amount of value
+                        possible.
+
+                        Having started my career working with highly available load balanced and clustered
+                        infrastructure and navigated virtualization and then into the cloud, I continue to be interested
+                        in highly scalable infrastructure like Kubernetes as well as Docker and containers in general.
+                    </p>
 
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>C#</span>
-                            <span>40%</span>
-                        </div>
-                        <div class="line csharp">
-                        </div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
                             <span>Python</span>
-                            <span>30%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line python">
                         </div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PowerShell</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line powershell">
-                        </div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
                             <span>Terraform</span>
-                            <span>30%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line terraform">
                         </div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Docker</span>
+                            <span>PowerShell</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line powershell">
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Ansible</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line ansible">
+                        </div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CloudFormation</span>
                             <span>30%</span>
                         </div>
-                        <div class="line docker">
+                        <div class="line cloudformation">
                         </div>
                     </div>
                 </div>
