new role update

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <div class="text">
                         I'm Steve and I'm a <span>DevOps Engineer</span></div>
                     <p>
-                        I'm currently a Sr. DevOps Engineer for Navisite supporting clients in the AWS cloud space. I've
-                        been in IT for 15 years. In 2016 I
+                        I'm currently a DevOps Engineer for Machinify helping deliver value to customers through technology. I've
+                        been in technology for over 15 years. In 2016 I
                         started supporting Jet.com which was born in the cloud and leveraging Microsoft's
                         Azure. Later that year Walmart purchased the company and in 2019 I found myself on the Exchange
                         team for Global Walmart. A year after my move, I felt like I was missing what I enjoyed in
@@ -108,11 +108,8 @@
                     <div class="text">
                         My creative skills & experiences.</div>
                     <p>
-                        I spend most of my time focused on improving the experience customer's have with AWS and
-                        creating efficiencies in the way the deliver their products. My primary focus is Python,
-                        Terraform, and Ansible but I leverage CloudFormation and other tools depending on my customer's
-                        needs. Regardless of what's presented, my main focus is providing the most amount of value
-                        possible.
+                        I spend most of my time focused on improving the delivery of our applications. My primary focus is Python,
+                        Terraform, Bash, and Ansible. Regardless of what's presented, my main focus is creating value swiftly, safely, and reliably. 
 
                         Having started my career working with highly available load balanced and clustered
                         infrastructure and navigated virtualization and then into the cloud, I continue to be interested
@@ -139,10 +136,10 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PowerShell</span>
+                            <span>Bash</span>
                             <span>60%</span>
                         </div>
-                        <div class="line powershell">
+                        <div class="line bash">
                         </div>
                     </div>
                     <div class="bars">
