--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#" class="menu-btn">Home</a></li>
-                <li><a href="https://blog.stevemorgan.dev" class="menu-btn">Blog</a></li>
+                <li><a href="https://hashnode.stevemorgan.dev" class="menu-btn">Hashnode</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
@@ -77,20 +77,13 @@
                 </div>
                 <div class="column right">
                     <div class="text">
-                        I'm Steve and I'm a <span>DevOps Engineer</span></div>
+                        I'm Steve and I'm currently a <span>DevOps Engineer</span></div>
                     <p>
-                        I'm currently a DevOps Engineer for Machinify helping deliver value to customers through technology. I've
-                        been in technology for over 15 years. In 2016 I
-                        started supporting Jet.com which was born in the cloud and leveraging Microsoft's
-                        Azure. Later that year Walmart purchased the company and in 2019 I found myself on the Exchange
-                        team for Global Walmart. A year after my move, I felt like I was missing what I enjoyed in
-                        technology; building, engineering, automating. Bureaucracy and governance got in the way of
-                        every project I worked on and it didn't take long
-                        for me to miss working in the cloud. After some research I found DevOps and fell in love with
-                        everything I read about it. After reading The Phoenix Project, I knew it was the direction I
-                        needed to head. I enrolled in a Computer Science undergrad program and began working learning
-                        everything else I could get my hands on to carve out the path I needed to move into the DevOps
-                        space.
+                    I started in tech in 2005 with my first help desk position on a large Navy contract. I knew I was good with computers, and that guided my most of my career. If I was given an opportunity, I was going to do well. I never thought of tech as this vast world of opportunity. For the majority of my career, it was an opportunity to survive.
+                    <br>
+                    From 2005-2016 my experience revolved around DoD contracts and on premesises Micirosft enterprise environments. It was the "market" if you will in the Hampton Roads, VA area that I grew up. My wife was looking to pursue her PhD path so we opted to move to the West Coast and experience something different. This led me to a job with Jet.com, an e-commerce start up that was purchased by Walmart in that same year. I remained with Jet, building and supporting infrastructure across the US and also in Dublin, Ireland until 2019 when I moved to the gloabl email team at Walmart. I began missing the newer technology, constant learning, and pace of work tha came with working for Jet.
+                    <br>
+                    After some reflection in 2020, I decided to pursue a path of becoming a software engineer. This is a path I am still actively pursuing and hope to eventually apply my previous experiences in infrastructure and operations to a software engineering role in the future.
                     </p>
                 </div>
             </div>
@@ -108,12 +101,11 @@
                     <div class="text">
                         My creative skills & experiences.</div>
                     <p>
-                        I spend most of my time focused on improving the delivery of our applications. My primary focus is Python,
-                        Terraform, Bash, and Ansible. Regardless of what's presented, my main focus is creating value swiftly, safely, and reliably. 
-
-                        Having started my career working with highly available load balanced and clustered
-                        infrastructure and navigated virtualization and then into the cloud, I continue to be interested
-                        in highly scalable infrastructure like Kubernetes as well as Docker and containers in general.
+                        My day to day working responsibilities include supporting distributed applications deployed on traditional infrastructure, such as Amazon EC2 instances, as well as applications deployed on Kubernetes. I spend a lot of time improving processes and configurations in the ways that we deploy applications, infrastructure, and how we support them and other teams. We deploy and support big data technologies such as Apache spark and Hadoop, RDMS such as PosgreSQL, and containerized solutions running on Docker and Kubernetes. We manage our deployments via configuration management and automation technologies such Ansible, Terraform, and trusty bash scripts.
+                        <br>
+                        I'm currently spending my free time learning Golang as well as data structures and algorithms with Python. I'm spending time learning about Project Sigstore and making use of Tekton to tie my software projects and software security together with Continuous Integration and Continuous Delivery (CICD). I hope to become and regular contributor to the Sigstore project, and potentially other open-source projects as well.
+                        <br>
+                        I have created a personal project called healthy-seed to apply my learnings with Golang and demonstrate my abilities along the way.
                     </p>
 
                 </div>
@@ -269,7 +261,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">Steve Morgan</a> | <span class="far fa-copyright"></span> 2020 All rights
+        <span>Created By <a href="#">Steve Morgan</a> | <span class="far fa-copyright"></span> 2022 All rights
             reserved.</span>
     </footer>
     <script src="scripts/scripts.js"></script>
