feat: add mastodon
Signed-off-by: Stephen Morgan <steve@rebelops.io>

--- a/index.html
+++ b/index.html
@@ -251,6 +251,19 @@
                         </div>
                     </div>
                 </div>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fab fa-mastodon"></i>
+                            <div class="info">
+                                <div class="head">
+                                    Mastodon
+                                </div>
+                                <div class="sub-title">
+                                    <a rel="me" href="https://social.linux.pizza/@rebelopsio">rebelopsio</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
             </div>
         </div>
