fix: update mastodon server
Signed-off-by: Stephen Morgan <steve@rebelops.io>

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                     Mastodon
                                 </div>
                                 <div class="sub-title">
-                                    <a rel="me" href="https://social.linux.pizza/@rebelopsio">rebelopsio</a>
+                                    <a rel="me" href="https://triangletoot.party/@rebelopsio">rebelopsio</a>
                                 </div>
                             </div>
                         </div>
