--- a/index.html
+++ b/index.html
@@ -1,161 +1,208 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/e749d4b108.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"
-        integrity="sha512-BdHyGtczsUoFcEma+MfXc71KJLv/cd+sUsUaYYf2mXpfG/PtBjNXsPo78+rxWjscxUYN2Qr2+DbeGGiJx81ifg=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"
-        integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/e749d4b108.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"
+      integrity="sha512-BdHyGtczsUoFcEma+MfXc71KJLv/cd+sUsUaYYf2mXpfG/PtBjNXsPo78+rxWjscxUYN2Qr2+DbeGGiJx81ifg=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"
+      integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <title>Steve Morgan, DevOps Engineer</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- nav section start -->
     <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
+      <i class="fas fa-angle-up"></i>
     </div>
     <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
-            <ul class="menu">
-                <li><a href="#" class="menu-btn">Home</a></li>
-                <li><a href="https://hashnode.stevemorgan.dev" class="menu-btn">Hashnode</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
+      <div class="max-width">
+        <div class="logo">
+          <a href="#">Portfo<span>lio.</span></a>
         </div>
+        <ul class="menu">
+          <li><a href="#" class="menu-btn">Home</a></li>
+          <li>
+            <a href="https://hashnode.stevemorgan.dev" class="menu-btn"
+              >Hashnode</a
+            >
+          </li>
+          <li><a href="#about" class="menu-btn">About</a></li>
+          <li><a href="#skills" class="menu-btn">Skills</a></li>
+          <li><a href="#contact" class="menu-btn">Contact</a></li>
+        </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
     </nav>
     <!-- nav section end -->
 
     <!-- home section start -->
     <section class="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Steve Morgan</div>
-                <div class="text-3">And I'm a <span>DevOps Engineer</span></div>
-            </div>
+      <div class="max-width">
+        <div class="home-content">
+          <div class="text-1">Hello, my name is</div>
+          <div class="text-2">Steve Morgan</div>
+          <div class="text-3">And I'm a <span>Solutions Architect</span></div>
         </div>
+      </div>
     </section>
     <!-- home section end -->
 
     <!-- about section start -->
     <section class="about" id="about">
-        <div class="max-width">
-            <h2 class="title">
-                About me</h2>
-            <div class="about-content">
-                <div class="column left">
-                    <img src="images/me.jpg" alt="">
-                </div>
-                <div class="column right">
-                    <div class="text">
-                        I'm Steve and I'm currently a <span>DevOps Engineer</span></div>
-                    <p>
-                    I started in tech in 2005 with my first help desk position on a large Navy contract. I knew I was good with computers, and that guided my most of my career. If I was given an opportunity, I was going to do well. I never thought of tech as this vast world of opportunity. For the majority of my career, it was an opportunity to survive.
-                    <br><br>
-                    From 2005-2016 my experience revolved around DoD contracts and on premises Microsoft enterprise environments. It was the "market" if you will in the Hampton Roads, VA area that I grew up. My wife was looking to pursue her PhD path, so we opted to move to the West Coast and experience something different. This led me to a job with Jet.com, an e-commerce start up that was purchased by Walmart in that same year. I remained with Jet, building and supporting infrastructure across the US and also in Dublin, Ireland until 2019 when I moved to the gloabl email team at Walmart. I began missing the newer technology, constant learning, and pace of work tha came with working for Jet.
-                    <br><br>
-                    After some reflection in 2020, I decided to pursue a path of becoming a software engineer. This is a path I am still actively pursuing and hope to eventually apply my previous experiences in infrastructure and operations to a software engineering role in the future.
-                    </p>
-                </div>
+      <div class="max-width">
+        <h2 class="title">About me</h2>
+        <div class="about-content">
+          <div class="column left">
+            <img src="images/me.jpg" alt="" />
+          </div>
+          <div class="column right">
+            <div class="text">
+              I'm Steve and I'm currently a <span>Solutions Architect</span>!
             </div>
+            <p>
+              In 2005, my tech odyssey began with a help desk position on a Navy
+              contract, marking the start of a journey driven by my innate
+              proficiency with computers. This early stage was more about
+              survival in the tech world than realizing its vast potential.
+              <br /><br />
+              My career between 2005 and 2016 was predominantly in DoD contracts
+              and Microsoft enterprise environments in Hampton Roads, VA. A
+              turning point came when my wife embarked on her PhD journey,
+              prompting our move to the West Coast. This led me to Jet.com, a
+              dynamic e-commerce startup later acquired by Walmart. My role
+              there, and subsequently at Walmart's global email team, involved
+              building and supporting expansive infrastructures across the US
+              and in Dublin, Ireland. However, I yearned for the rapid learning
+              and pace that Jet offered.
+              <br /><br />
+              This desire for continuous growth and challenge inspired my shift
+              in 2020 towards software engineering. As I delve deeper into this
+              field, my current work in DevOps, site reliability engineering,
+              and platform engineering has become a cornerstone of my
+              professional development. These roles, blending rigorous technical
+              skills with innovative problem-solving, are preparing me for my
+              ultimate goal: to integrate my comprehensive background in
+              infrastructure, operations, and software development into a
+              software engineering role that continuously evolves and challenges
+              the norm.
+              <br /><br />
+              Every step of this journey, from help desk to high-level
+              engineering, has been a building block towards a future where I
+              can fully leverage my diverse experiences in a role at the
+              forefront of technological advancement.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- skills section start -->
     <section class="skills" id="skills">
-        <div class="max-width">
-            <h2 class="title">
-                My skills</h2>
-            <div class="skills-content">
-
-                <div class="column left">
-                    <div class="text">
-                        My creative skills & experiences.</div>
-                    <p>
-                        My day to day working responsibilities include supporting distributed applications deployed on traditional infrastructure, such as Amazon EC2 instances, as well as applications deployed on Kubernetes. I spend a lot of time improving processes and configurations in the ways that we deploy applications, infrastructure, and how we support them and other teams. We deploy and support big data technologies such as Apache spark and Hadoop, RDMS such as PostgreSQL, and containerized solutions running on Docker and Kubernetes. We manage our deployments via configuration management and automation technologies such Ansible, Terraform, and trusty bash scripts.
-                        <br><br>
-                        I'm currently spending my free time learning Golang as well as data structures and algorithms with Python. I'm spending time learning about Project Sigstore and making use of Tekton to tie my software projects and software security together with Continuous Integration and Continuous Delivery (CICD). I hope to become and regular contributor to the Sigstore project, and potentially other open-source projects as well.
-                        <br><br>
-                        I have created a personal project called healthy-seed to apply my learnings with Golang and demonstrate my abilities along the way.
-                    </p>
-
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>Python</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line python">
-                        </div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Terraform</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line terraform">
-                        </div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Bash</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line bash">
-                        </div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Ansible</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line ansible">
-                        </div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CloudFormation</span>
-                            <span>30%</span>
-                        </div>
-                        <div class="line cloudformation">
-                        </div>
-                    </div>
-                </div>
-
+      <div class="max-width">
+        <h2 class="title">My skills</h2>
+        <div class="skills-content">
+          <div class="column left">
+            <div class="text">
+              My current personal & profissional experiences.
             </div>
+            <p>
+              In my role as a Solutions Architect at the insuretech startup
+              Cover Whale, I immediately recognized the necessity to implement
+              modern software and DevOps best practices. A primary objective was
+              to standardize our cloud infrastructure through infrastructure as
+              code. Initially, Terraform was the standard choice, but as we
+              ventured towards platform engineering, I encountered resistance
+              from the engineering organization regarding the use of a
+              domain-specific language.
+              <br /><br />
+              This challenge led me to explore alternatives that aligned with
+              our operational goals and team dynamics. Our exploration
+              culminated in the adoption of Pulumi, a decision that profoundly
+              resonated with our team’s ethos. Pulumi not only felt organic in
+              its application but also marked a significant milestone in our
+              understanding and implementation of DevOps principles.
+              <br /><br />
+              Our engineering team has significantly benefited from this shift,
+              experiencing enhanced collaboration and breakdown of silos. The
+              foundation we built with Pulumi has been instrumental in our
+              success, fostering a more integrated and efficient working
+              environment. This journey with Pulumi has been a testament to the
+              power of choosing the right tools that align with both our
+              technical needs and team culture.
+              <br /><br />
+              As part of my current role, I am responsible for maintaining an
+              internal library of Pulumi components, a critical task that
+              involves expertise in Golang, TypeScript, and Python. This library
+              forms the backbone of our deployment and management processes for
+              cloud infrastructure within AWS. Its design and implementation are
+              pivotal in ensuring that our internal teams can work efficiently
+              and productively.
+              <br /><br />
+              Furthermore, the library plays a vital role in adhering to
+              regulatory compliance requirements, an aspect crucial to our
+              operational integrity. By providing robust and compliant
+              infrastructure solutions, the library I maintain not only
+              streamlines our internal processes but also reinforces our
+              commitment to meeting industry standards.
+              <br /><br />
+              I am passionate about exploring new technologies and continuously
+              expanding my skill set. Currently, I am deepening my proficiency
+              in Golang while simultaneously delving into Rust, a language I
+              find fascinating and remarkably complementary to Golang. Rust's
+              unique features and capabilities have captured my interest,
+              especially with the recent launch of the AWS SDK for Rust.
+              <br /><br />
+              This development has sparked my curiosity about integrating Rust
+              with Pulumi. I am eager to explore the potential synergies between
+              these technologies and assess the feasibility of bringing Rust
+              into the Pulumi ecosystem. I believe that combining Rust's
+              performance and safety features with Pulumi's
+              infrastructure-as-code capabilities could unlock new possibilities
+              and efficiencies in cloud infrastructure management.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
-
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
@@ -268,8 +315,6 @@
             </div>
         </div>
 
-        </div>
-        </div>
     </section>
 
     <!-- footer section start -->
@@ -279,5 +324,4 @@
     </footer>
     <script src="scripts/scripts.js"></script>
 </body>
-
 </html>
