--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="max-width">
         <h2 class="title">My skills</h2>
         <div class="skills-content">
-          <div class="column left">
+          <div class="column">
             <div class="text">
               My current personal & profissional experiences.
             </div>
