fix: add pulumi link

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <br /><br />
               This challenge led me to explore alternatives that aligned with
               our operational goals and team dynamics. Our exploration
-              culminated in the adoption of Pulumi, a decision that profoundly
+              culminated in the adoption of <a href="https://www.pulumi.com">Pulumi</a>, a decision that profoundly
               resonated with our team’s ethos. Pulumi not only felt organic in
               its application but also marked a significant milestone in our
               understanding and implementation of DevOps principles.
