docs: Updating contact information

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                 <div class="head">
                                     Location</div>
                                 <div class="sub-title">
-                                    Sparks, NV</div>
+                                    Raleigh, NC</div>
                             </div>
                         </div>
                         <div class="row">
@@ -277,7 +277,7 @@
                                     Twitter
                                 </div>
                                 <div class="sub-title">
-                                    <a href="https://twitter.com/rebelopsio">rebelopsio</a>
+                                    <a href="https://twitter.com/stevemorgandev">stevemorgandev</a>
                                 </div>
                             </div>
                         </div>
